Updated first page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
 <html>
-<body>
-STDR Simulator
-</body>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<p style="text-align: center;">
+			<span style="font-size:48px;"><strong>S.T.D.R. Simulator</strong></span></p>
+		<p style="text-align: center;">
+			(Simple Two Dimensional Robot Simulator)</p>
+		<p style="text-align: center;">
+			<img alt="" src="http://el.gravatar.com/userimage/57351762/0ce1d1d97f9029e34f8ed359390bc352.png?size=400" style="width: 400px; height: 400px;" /></p>
+		<p>
+			Simple Two Dimentional Robot Simulator (STDR Simulator) is a multi-robot simulator created in QT4. Its goals are :</p>
+		<ul>
+			<li>
+				To simulate easily a single robot or a swarm in a 2D environment</li>
+			<li>
+				To be totally parameterizable</li>
+			<li>
+				To be ROS compliant.</li>
+		</ul>
+		<p>
+			STDRs <a href="https://github.com/stdr-simulator-ros-pkg">organization</a> repositories are :</p>
+		<ul>
+			<li>
+				<a href="https://github.com/stdr-simulator-ros-pkg/stdr_simulator">stdr_simulator</a>&nbsp;:&nbsp;Provides code for the Server, GUI and Robots</li>
+			<li>
+				<a href="https://github.com/stdr-simulator-ros-pkg/stdr_resources">stdr_resources</a> :&nbsp;Map, robot and sensor resources for STDR simulator</li>
+			<li>
+				<a href="https://github.com/stdr-simulator-ros-pkg/stdr_docs">stdr_docs</a> :&nbsp;Documentation for STDR Simulator</li>
+		</ul>
+	</body>
 </html>
