--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 		</table>
 		<p>
 			&nbsp;</p>
+		<script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users_logo.js"></script>
 	</body>
 </html>
