--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 						</ul>
 					</td>
 				</tr>
+				<tr>
+					<td><script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users_logo.js"></script></td>
+				</tr>
 			</tbody>
 		</table>
 		<p>
 			&nbsp;</p>
-		<script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users_logo.js"></script>
+		
 	</body>
 </html>
