--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="text-align: center;"><script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users_logo.js"></script></td>
+					<td align="center"><script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users.js?style=green"></script></script></td>
 				</tr>
 			</tbody>
 		</table>
