--- a/website/index.html
+++ b/website/index.html
@@ -26,113 +26,108 @@ Released   : 20131203
 <body>
 <div id="header-wrapper">
 	<div id="header" class="container">
+<!--
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Github page</a></li>
-				<li><a href="#" accesskey="3" title="">How to contribute</a></li>
-				<li><a href="#" accesskey="4" title="">Tutorials</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="media.html" accesskey="2" title="">Screenshots</a></li>
+				<li><a href="download.html" accesskey="3" title="">Download</a></li>
+				<li class="current_page_item"><a href="contact.html" accesskey="4" title="">Contact</a></li>
 			</ul>
 		</div>
+-->
 		<div id="logo">
 			<a href="#"><img src='images/logo.png'/ width='300px'></a>
     </div>
 	</div>
 </div>
+
+
 <div id="wrapper1">
 	<div id="welcome" class="container">
 		<div class="title">
-			<h2>Welcome to our website</h2>
-			<span class="byline">Mauris vulputate dolor sit amet nibh</span> </div>
+			<h2>S.T.D.R. Simulator</h2><br>
+			<span class="byline">(Simple Two Dimensional Robot Simulator)</span> </div>
 		<div class="content">
-			<p>This is <strong>Veridical</strong>, a free, fully standards-compliant CSS template designed by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attributions 3.0</a> license, so you are pretty much free to do whatever you want with it (even use it commercially) provided you keep the links in the footer intact. Aside from that, have fun with it :) </p>
-			<a href="#" class="button">Etiam posuere</a> </div>
+      <p style="text-align: justify;">
+        Simple Two Dimentional Robot Simulator (STDR Simulator) is a multi-robot simulator created in QT4. Its goals are :
+      </p>
+      <ul>
+        <li style="text-align: justify;">
+          To simulate easily a single robot or a swarm in a 2D environment</li>
+        <li style="text-align: justify;">
+          To be totally parameterizable</li>
+        <li style="text-align: justify;">
+          To be ROS compliant.</li>
+      </ul>
 	</div>
 </div>
+
+
 <div id="wrapper3">
 	<div id="portfolio" class="container">
 		<div class="title">
-			<h2>Design Portfolio</h2>
-			<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
+			<h2>Contents</h2>
+			<span class="byline">All you need to know about STDR simulator</span> </div>
+    <hr>
 		<div class="pbox1">
 			<div class="column1">
-				<div class="box"> <span class="icon icon-comments"></span>
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/logo.png'/ width='80px'></span>
+          <h3>What is STDR?</h3>
+					<p>General description</p>
 				</div>
 			</div>
 			<div class="column2">
-				<div class="box"> <span class="icon icon-cogs"></span>
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/ros_enabled.png'/ width='80px'></span>
+					<h3>Is STDR in ROS ecosystem?</h3>
+					<p>Official ROS wiki page</p>
 				</div>
 			</div>
 			<div class="column3">
-				<div class="box"> <span class="icon icon-coffee"></span>
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/download.png'/ width='80px'></span>
+					<h3>How can I download it?</h3>
+					<p>Ways to get STDR Simulator</p>
 				</div>
 			</div>
 			<div class="column4">
-				<div class="box"> <span class="icon icon-cloud"></span>
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/look.png'/ width='80px'></span>
+					<h3>What does it look like?</h3>
+					<p>Multimedia</p>
 				</div>
 			</div>
 		</div>
+    <hr>
 		<div class="pbox2">
 			<div class="column1">
-				<div class="box"> <span class="icon icon-asterisk"></span>
-					<h3>Rhoncus volutpat</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+				<div class="box"> <span class="icon icon-cogs"></span>
+					<h3>How can I use it?</h3>
+					<p>Tutorials</p>
 				</div>
 			</div>
 			<div class="column2">
-				<div class="box"> <span class="icon icon-headphones"></span>
-					<h3>Sed odio sagittis</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/contribute.png'/ width='80px'></span>
+					<h3>How can I help?</h3>
+					<p>Ways to contribute</p>
 				</div>
 			</div>
 			<div class="column3">
-				<div class="box"> <span class="icon icon-user"></span>
-					<h3>Aenean elementum</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> <span><img src='images/contact.png'/ width='80px'></span>
+					<h3>How can I contact you?</h3>
+					<p>Contact information</p>
 				</div>
 			</div>
 			<div class="column4">
-				<div class="box"> <span class="icon icon-signal"></span>
-					<h3>Etiam posuere augue</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+				<div class="box"> 
+					<h3>Do you use STDR Simulator?</h3>
+					<p><script type="text/javascript" src="http://www.ohloh.net/p/712579/widgets/project_users.js?style=green"></script></script></p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<div id="wrapper2">
-	<div id="featured" class="container">
-		<div class="box1">
-			<h2><span class="icon icon-group"></span>Fusce ultrices fringilla</h2>
-			<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-		</div>
-		<div class="box2">
-			<h2><span class="icon icon-briefcase"></span>Etiam posuere augue</h2>
-			<p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
-		</div>
-	</div>
-</div>
+
 <div id="copyright">
-	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-	</ul>
-	<p>Copyright (c) 2013 Sitename.com. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.</p>
+	<p>Copyright (c) 2014 STDR Simulator. All rights reserved.</p>
 </div>
 </body>
 </html>
