--- a/website/index.html
+++ b/website/index.html
@@ -72,27 +72,30 @@ Released   : 20131203
     <hr>
 		<div class="pbox1">
 			<div class="column1">
-				<div class="box"> <span><img src='images/logo.png'/ width='80px'></span>
+				<div class="box"> 
+          <span>
+            <img src='images/logo.png'/ width='80px'>
+          </span>
           <h3>What is STDR?</h3>
-					<p>General description</p>
+					<p class='button-link'><a href="#">General description</a></p>
 				</div>
 			</div>
 			<div class="column2">
 				<div class="box"> <span><img src='images/ros_enabled.png'/ width='80px'></span>
 					<h3>Is STDR in ROS ecosystem?</h3>
-					<p>Official ROS wiki page</p>
+					<p class='button-link'><a href="#">Official ROS wiki page</a></p>
 				</div>
 			</div>
 			<div class="column3">
 				<div class="box"> <span><img src='images/download.png'/ width='80px'></span>
 					<h3>How can I download it?</h3>
-					<p>Ways to get STDR Simulator</p>
+					<p class='button-link'><a href="#">Ways to get STDR Simulator</a></p>
 				</div>
 			</div>
 			<div class="column4">
 				<div class="box"> <span><img src='images/look.png'/ width='80px'></span>
 					<h3>What does it look like?</h3>
-					<p>Multimedia</p>
+					<p class='button-link'><a href="#">Multimedia</a></p>
 				</div>
 			</div>
 		</div>
@@ -101,19 +104,19 @@ Released   : 20131203
 			<div class="column1">
 				<div class="box"> <span class="icon icon-cogs"></span>
 					<h3>How can I use it?</h3>
-					<p>Tutorials</p>
+					<p class='button-link'><a href="#">Tutorials</a></p>
 				</div>
 			</div>
 			<div class="column2">
 				<div class="box"> <span><img src='images/contribute.png'/ width='80px'></span>
 					<h3>How can I help?</h3>
-					<p>Ways to contribute</p>
+					<p class='button-link'><a href="#">Ways to contribute</a></p>
 				</div>
 			</div>
 			<div class="column3">
 				<div class="box"> <span><img src='images/contact.png'/ width='80px'></span>
 					<h3>How can I contact you?</h3>
-					<p>Contact information</p>
+					<p class='button-link'><a href="#">Contact information</a></p>
 				</div>
 			</div>
 			<div class="column4">
