Added link for future ros wiki page

--- a/website/index.html
+++ b/website/index.html
@@ -62,7 +62,7 @@ Released   : 20131203
           <div class="column2">
             <div class="box"> <span><img src='images/ros_enabled.png'/ width='70px'></span>
               <h3>Is STDR in ROS ecosystem?</h3>
-              <p class='button-link'>Official ROS wiki page</p>
+              <p class='button-link'><a href="http://wiki.ros.org/stdr_simulator" target="_blank">Official ROS wiki page</a></p>
             </div>
           </div>
           <div class="column3">
