--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Released   : 20131203
   <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="js/onLoad.js" type="text/javascript"></script>
+  
 </head>
 <body>
 <div id="header-wrapper">
@@ -196,5 +197,24 @@ Released   : 20131203
 <div id="copyright">
 	<p>Copyright (c) 2014 STDR Simulator. All rights reserved.</p>
 </div>
+
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=9532404; 
+var sc_invisible=0; 
+var sc_security="58c3e097"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter" align='center'><a title="web counter"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9532404/0/58c3e097/0/"
+alt="web counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
 </body>
 </html>
