Added links to GUI tutorials

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Released   : 20131203
               Our tutorials cover the areas of setting up the STDR Simulator, using the console-only interface and using the STDR GUI. 
             </p>
             <ul  style="text-align: justify;">
-        <li style="text-align: justify;"><a href='' target="_blank">Set up STDR Simulator</a></li>
+        <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/setupsim' target="_blank">Set up STDR Simulator</a></li>
         <li style="text-align: justify;">Use the command line</li>
         <ul style="text-align: justify;">
           <li style="text-align: justify;"><a href='' target="_blank">Basic usage (Start server, load a map, load a robot)</a></li>
@@ -206,11 +206,11 @@ Released   : 20131203
         </ul>
         <li style="text-align: justify;">Use STDR GUI</li>
         <ul style="text-align: justify;">
-          <li style="text-align: justify;"><a href='' target="_blank">Basic usage (Load a map, add a robot)</a></li>
-          <li style="text-align: justify;"><a href='' target="_blank">GUI toolbar</a></li>
-          <li style="text-align: justify;"><a href='' target="_blank">Robot right click functionalities</a></li>
-          <li style="text-align: justify;"><a href='' target="_blank">Visualizers and visualization status</a></li>
-          <li style="text-align: justify;"><a href='' target="_blank">Create a robot graphically</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/gui_toolbar' target="_blank">GUI toolbar</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/basic_usage' target="_blank">Basic usage (Load a map, add a robot)</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/robot_right_click' target="_blank">Robot right click functionalities</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/visualizers' target="_blank">Visualizers and visualization status</a></li>
+          <li style="text-align: justify;"><a href='http://wiki.ros.org/stdr_simulator/robot_creation' target="_blank">Create a robot graphically</a></li>
         </ul>
             </ul>
           </div>
