--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@ Released   : 20131203
             <br>
             <h3 style="text-align: justify;">Special thanx to ...</h3>
             <ul style="text-align: justify;">
-              <li style="text-align: justify;">Waiting for contributors!!</li>
+              <li style="text-align: justify;"><a href='https://github.com/akpappas'>Antonis Pappas</a> for documentation / dissemination</li>
+              <li style="text-align: justify;"><a href='https://github.com/trainman419'>Austin</a> for development in polygon robots support</li>
             </ul>
           </div>
         </div>
